[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/warp.png" type="Texture" id=1]
[ext_resource path="res://gui/player_icon.png" type="Texture" id=3]
[ext_resource path="res://gui/gui.gd" type="Script" id=4]
[ext_resource path="res://gui/GUI_THEME.tres" type="Theme" id=7]

[node name="GUI" type="CanvasLayer"]
layer = 3
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": "this canvas layer is here to stop the gui from shaking. "
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 800.0
margin_bottom = 600.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": "main container to add margin to the whole screen. theme is also applied here."
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 790.0
margin_bottom = 585.0
custom_constants/separation = 0

[node name="LabelContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 775.0
margin_bottom = 24.0
custom_constants/separation = 530

[node name="1UPLabel" type="Label" parent="MarginContainer/VBoxContainer/LabelContainer"]
margin_right = 111.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 0, 0.301961, 1 )
text = "player"

[node name="HighscoreLabel" type="Label" parent="MarginContainer/VBoxContainer/LabelContainer"]
margin_left = 641.0
margin_right = 771.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 0, 0.301961, 1 )
text = "hiscore"
align = 1
valign = 1

[node name="ScoreContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 775.0
margin_bottom = 48.0
mouse_filter = 2
theme = ExtResource( 7 )
custom_constants/separation = 545

[node name="Playerscore" type="Label" parent="MarginContainer/VBoxContainer/ScoreContainer"]
margin_right = 113.0
margin_bottom = 24.0
text = "000000"

[node name="Highscore" type="Label" parent="MarginContainer/VBoxContainer/ScoreContainer"]
margin_left = 658.0
margin_right = 771.0
margin_bottom = 24.0
text = "000000"

[node name="PlayfieldContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 775.0
margin_bottom = 546.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_editor_description_": "Spacer for the playfield"
}

[node name="StatsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 546.0
margin_right = 775.0
margin_bottom = 570.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 285

[node name="LifeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsContainer"]
margin_right = 65.0
margin_bottom = 24.0
custom_constants/separation = 8

[node name="PlayerIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/StatsContainer/LifeContainer"]
modulate = Color( 1, 0.937255, 0, 1 )
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 3 )
stretch_mode = 1

[node name="LifeCounter" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer/LifeContainer"]
margin_left = 28.0
margin_right = 65.0
margin_bottom = 24.0
text = "02"

[node name="WarpContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsContainer"]
margin_left = 350.0
margin_right = 415.0
margin_bottom = 24.0
custom_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/StatsContainer/WarpContainer"]
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="WarpLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer/WarpContainer"]
margin_left = 28.0
margin_right = 65.0
margin_bottom = 24.0
text = "03"

[node name="LevelCounter" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
margin_left = 700.0
margin_right = 775.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.160784, 0.67451, 1, 1 )
text = "L=01"
